--- a/H2/H2.html
+++ b/H2/H2.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>H2 Page</title>
+    <title>Heimadæmi 2</title>
 </head>
 <body>
-    <h1>Welcome to H2 Page</h1>
+    <h1>Heimadæmi 2</h1>
     <ul>
-        <li><a href="D1/H2D1.html">Project D1</a></li>
-        <li><a href="D2/H2D2.html">Project D2</a></li>
-        <li><a href="D3/H2D3.html">Project D3</a></li>
-        <li><a href="D4/H2D4.html">Project D4</a></li>
-        <li><a href="D5/H2D5.html">Project D5</a></li>
+        <li><a href="D1/H2D1.html">Dæmi 1</a></li>
+        <li><a href="D2/H2D2.html">Dæmi 2</a></li>
+        <li><a href="D3/H2D3.html">Dæmi 3</a></li>
+        <li><a href="D4/H2D4.html">Dæmi 4</a></li>
+        <li><a href="D5/H2D5.html">Dæmi 5</a></li>
     </ul>
 </body>
 </html>
