--- a/H2/D2/A/H2D2A.html
+++ b/H2/D2/A/H2D2A.html
@@ -26,7 +26,7 @@ main()
 
 <script type="text/javascript" src="../../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../../Common/initShaders.js"></script>
-<script type="text/javascript" src="h2d2a.js"></script>
+<script type="text/javascript" src="h2d2b.js"></script>
 </head>
 
 <body>
