--- a/H2/D2/B/H2D2B.html
+++ b/H2/D2/B/H2D2B.html
@@ -24,8 +24,8 @@ main()
 }
 </script>
 
-<script type="text/javascript" src="../Common/webgl-utils.js"></script>
-<script type="text/javascript" src="../Common/initShaders.js"></script>
+<script type="text/javascript" src="../../Common/webgl-utils.js"></script>
+<script type="text/javascript" src="../../Common/initShaders.js"></script>
 <script type="text/javascript" src="h2d2b.js"></script>
 </head>
 
